# libct

./: AUTHORS  LICENSE  README.md  _config.yml  fileformat.md  index.md  meson.build  modelgeneration.md  setup-dev-env  usage.md
_includes/: logos.html
_layouts/: default.html
assets/css/: style.scss
include/: ct.h  ct.hpp
include/ct/: allocator.hpp  array_accessor.hpp  conflict_factor.hpp  conflict_messages.hpp  conflict_subsolver.hpp  consistency.hpp  debug.hpp  detection_factor.hpp  fixed_vector.hpp  graph.hpp  misc.hpp  signal_handler.hpp  solver.hpp  system_includes.hpp  tracker.hpp  transition_messages.hpp  types.hpp
lib/: ct.cpp
python/ct/: __init__.py  gurobi.py  model.py  primals.py  rounding.py  tracker.py  txt.py  utils.py
scripts/: update-header-guards
subprojects/gurobi-finder/: find-gurobi  meson.build
swig/: ct.i
